Revert "Convert a Path to a PathSourcePath" 311416c92635813efb248e018178df7a0a9d8e24 and the stacked cdfd9de9ba7e6734d0e2b06facb2f871e5906e43, 39034826e9e2102afddb0e2eb38a77254b4abea3
Reviewed By: shivanker

fbshipit-source-id: d027a2b